[package]
name = "musl-perf"
version = "0.1.0"
authors = ["gmlove <gracekinglau@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
uuid = { version = "0.8", features = ["serde", "v4"] }
rayon = "1.1"