# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "web_server"
version = "0.1.0"
authors = ["gmliao"]
edition = "2018"

[dependencies]
logger = { path = "../logger" }
clap = "2.27.1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.7"

[dev-dependencies]
pretty_assertions = "0.4.0"
reqwest = { version = "0.10", features = ["blocking", "json"] }
tokio = { version = "0.2", features = ["full"] }
futures = { version = "0.3", features = ["compat"] }
